--- a/views/content/blog.html
+++ b/views/content/blog.html
@@ -6,7 +6,7 @@
   <div class="blog-page">
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-12">
           <div class="blog-pagesection">
             <div class="row">
               <div class="col-md-6" ng-repeat="blog in blogpage">
@@ -26,7 +26,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
           <div class="get-inblog">
             <form action="">
               <div class="form-group">
