--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -6,7 +6,7 @@
   <div class="blog-detail blog-page">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-12">
+        <div class="col-md-8 col-sm-12">
           <div class="check-blog">
             <div class="blog-postinfo">
               <div class="bloginfo-imgholder">
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-12">
+        <div class="col-md-4 col-sm-12">
           <div class="get-inblog">
             <form action="">
               <div class="form-group">
