--- a/views/content/coolsculpting.html
+++ b/views/content/coolsculpting.html
@@ -36,7 +36,7 @@
         <div class="watch-video text-center">
           <h2 class="text-uppercase brand-primary font-semibold">watch the video</h2>
           <div class="play-me">
-            <a href="">
+            <a href="{{video}}" fancybox-box class="various fancybox.iframe">
               <img src="img/sculpting/video-play.png" alt="" class="img-responsive">
             </a>
           </div>
