--- a/views/footer.html
+++ b/views/footer.html
@@ -4,13 +4,13 @@
             <div class="col-md-2 col-xs-6">
                 <div class="menu text-uppercase letter-space">
                     <ul>
-                        <li><a href="" title="Home">home</a></li>
+                        <li><a href="#/home" title="Home">home</a></li>
                         <li><a href="#/coolsculpting" title="Cool Sclupting">Cool Sclupting</a></li>
                         <li><a href="#/nutrigenomics" title="Nutrigenomics">Nutrigenomics</a></li>
                         <li><a href="#/imageconsulting" title="Image Consulting">Image Consulting</a></li>
                         <li><a href="#successstories" title="Success Stories">Success Stories</a></li>
                         <li><a href="#/news" title="News">News</a></li>
-                        <li><a href="" title="Blog">Blog</a></li>
+                        <li><a href="#/blog" title="Blog">Blog</a></li>
                         <li><a href="#contactus" title="Contact">Contact</a></li>
                     </ul>
                 </div>
@@ -52,8 +52,8 @@
                     <h5 class="brand-primary-lighter">HEALTH KIT</h5>
                     <div class="submenu text-uppercase">
                         <ul>
-                            <li><a href="" title="Calorie Meter">CALORIE METER</a></li>
-                            <li> <a href="" title="Recipes">RECIPES</a></li>
+                            <li><a href="#/knowyourstats" title="Calorie Meter">CALORIE METER</a></li>
+                            <li> <a href="#/recipes" title="Recipes">RECIPES</a></li>
                         </ul>
                     </div>
                 </div>
