--- a/views/content/blog.html
+++ b/views/content/blog.html
@@ -32,7 +32,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Search">
-                  <span class="input-group-addon"><i class="fa fa-search brand-brown-dark"></i></span>
+                  <span class="input-group-addon pointer"><i class="fa fa-search brand-brown-dark"></i></span>
                 </div>
               </div>
             </form>
