--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -5,6 +5,16 @@
   </div>
   <div class="blog-detail blog-page">
     <div class="container">
+      <div class="get-inblog hidden-lg hidden-md">
+        <form action="">
+          <div class="form-group">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search">
+              <span class="input-group-addon pointer"><i class="fa fa-search brand-brown-dark"></i></span>
+            </div>
+          </div>
+        </form>
+      </div>
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="check-blog">
@@ -98,7 +108,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-12">
-          <div class="get-inblog">
+          <div class="get-inblog hidden-sm hidden-xs">
             <form action="">
               <div class="form-group">
                 <div class="input-group">
