--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -219,8 +219,10 @@
                         <div class="read-detail right">
                           <div class="row">
                             <div class="col-md-5">
-                              <span class="name text-left font-semibold brand-brown-dark">{{read.name}}</span><br>
-                              <span class="location text-left white">{{read.location}}</span>
+                              <div class="read-inner-detail">
+                                <span class="name text-left font-semibold brand-brown-dark">{{read.name}}</span><br>
+                                <span class="location text-left white">{{read.location}}</span>
+                              </div>
                             </div>
                             <div class="col-md-7">
                               <span class="title title-right text-right white font-semibold">{{read.title}}</span>
