--- a/sass/_mobile_harsh.scss
+++ b/sass/_mobile_harsh.scss
@@ -90,8 +90,8 @@
     font-size: 20px;
     @include margin(6px 0 0 -10px);
   }
-  .stories-section .read-detail.right .name { @include margin(6px 0 0 -80px); }
-  .stories-section .read-detail.right .location { @include margin(0 0 0 -80px); }
+  .stories-section .read-detail.right .read-inner-detail .name { @include margin(6px 0 0 -11px); }
+  .stories-section .read-detail.right .read-inner-detail .location { @include margin(0 0 0 -2px); }
 
   .section-story .slider { height: auto; }
 
@@ -102,6 +102,9 @@
   .check-blog { @include margin(0);}
   .bloginfo-imgholder { @include size(100%, 600px); }
   .related-post .relatepost-holder { width: 100%; }
+
+  // meet
+  .suman-video { height: 400px; }
 
 }
 @media (max-width: $screen-sm-max) {
@@ -177,12 +180,12 @@
   .stories-section .inner-view-right .name,
   .stories-section .inner-view-right .location { @include padding(0 10px 0 0); }
   .stories-section .read-detail .name { @include margin(20px 0 0); }
-  .stories-section .read-detail.right .name {
+  .stories-section .read-detail.right .read-inner-detail .name {
     @include square(100%);
     @include margin(20px 0 0 0);
     text-align: right;
   }
-  .stories-section .read-detail.right .location {
+  .stories-section .read-detail.right .read-inner-detail .location {
     @include square(100%);
     @include margin(0 0 10px 0);
     text-align: right;
@@ -201,7 +204,7 @@
   .get-inblog { @include margin(0 0 50px 0); }
 
   // blogdetail
-  
+
 }
 @media (max-width: $screen-xs-max) {
 
