--- a/views/content/pregnancy.html
+++ b/views/content/pregnancy.html
@@ -558,12 +558,14 @@
             <div class="healthmanagement-slider">
               <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-4" ng-repeat="detail in slide">
-                  <figure>
-                  <div class="slide-imghold round m-center">
-                    <img ng-src="{{detail.img}}" alt="" class="img-responsive">
-                  </div>
-                  <figcaption class="text-uppercase brand-brown-dark text-bold letter-space">{{detail.caption}}</figcaption>
-                  </figure>
+                  <a ui-sref="{{detail.link}}">
+                    <figure>
+                    <div class="slide-imghold round m-center">
+                      <img ng-src="{{detail.img}}" alt="" class="img-responsive">
+                    </div>
+                    <figcaption class="text-uppercase brand-brown-dark text-bold letter-space">{{detail.caption}}</figcaption>
+                    </figure>
+                  </a>
                 </div>
                 <!-- <div class="col-md-4">
                   <figure>
