--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -4,7 +4,7 @@
     letter-spacing: 2px;
   }
   .social-links {
-    margin: 2px 10px 0 0;
+    margin: 2px 10px 0 0; 
   }
   .about-suman {
     .heading {
@@ -269,8 +269,8 @@
     font-size: 15px;
   }
   .suman-video {
-    width: 65%;
-    height: 250px;
+    width: 60%;
+    height: 300px;
   }
   .pro-info {
     margin-top: 40px;
@@ -704,8 +704,8 @@
     margin-top: -40px;
   }
   .suman-video {
-    width: 75%;
-    height: 180px;
+    width: 350px;
+    height: 200px;
   }
   .about-suman {
     .heading {
@@ -1297,8 +1297,8 @@
     line-height: 16px;
   }
   .suman-video {
-    width: 85%;
-    height: 120px;
+    width: 250px;
+    height: 180px;
     top: 30px;
   }
   .about-suman {
