--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -148,7 +148,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="text-center letter-space font-semibold" ng-repeat="product in allcart">
+                    <tr class="text-center letter-space font-semibold" ng-repeat="product in allcart | orderBy:'id'">
                       <td>
                         <figure>
                           <div class="cart-imgholder m-center">
