--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -294,7 +294,7 @@
         <div class="row">
           <div class="col-md-offset-2 col-md-8">
             <div class="tag-text">
-              <h3 class="brand-primary">A reflection of our personality, our visual appearance creates
+              <h3 class="brand-primary text-center">A reflection of our personality, our visual appearance creates
           the first &amp; lasting impression on the opposite person’s mind</h3>
             </div>
           </div>
@@ -457,22 +457,22 @@
               <div class="col-md-6">
                 <div class="package-chart">
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3 ">
                       <div class="consult-chart relate inline-block text-center">
                         <span class="noconsult brand-brown-dark font-semibold">2</span>
                         <span class="text-uppercase white session font-gotham-bold">sessions</span>
                       </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                       <div class="session-charges brand-brown-bg">
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="price">
                               <span class="block">Charges</span>
                               <span class="block money"><i class="fa fa-inr">10000</i></span>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="session-descp">
                               <span class="block text-center white">Pick any 2 of the above services</span>
                             </div>
@@ -486,22 +486,22 @@
               <div class="col-md-6">
                 <div class="package-chart">
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                       <div class="consult-chart relate inline-block text-center">
                         <span class="noconsult brand-brown-dark font-semibold">8</span>
                         <span class="text-uppercase white session font-gotham-bold">sessions</span>
                       </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                       <div class="session-charges brand-brown-bg">
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="price">
                               <span class="block">Charges</span>
                               <span class="block money"><i class="fa fa-inr">27500</i></span>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="session-descp">
                               <span class="block text-center white">Pick all 8 or make your plan with Tina</span>
                             </div>
@@ -517,22 +517,22 @@
               <div class="col-md-6">
                 <div class="package-chart">
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                       <div class="consult-chart relate inline-block text-center">
                         <span class="noconsult brand-brown-dark font-semibold">4</span>
                         <span class="text-uppercase white session font-gotham-bold">sessions</span>
                       </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                       <div class="session-charges brand-brown-bg">
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="price">
                               <span class="block">Charges</span>
                               <span class="block money"><i class="fa fa-inr">15000</i></span>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="session-descp">
                               <span class="block text-center white">Pick any 4 of the above services</span>
                             </div>
@@ -546,22 +546,22 @@
               <div class="col-md-6">
                 <div class="package-chart">
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                       <div class="consult-chart relate inline-block text-center">
                         <span class="noconsult brand-brown-dark font-semibold">12</span>
                         <span class="text-uppercase white session font-gotham-bold">sessions</span>
                       </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                       <div class="session-charges brand-brown-bg">
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="price">
                               <span class="block">Charges</span>
                               <span class="block money"><i class="fa fa-inr">42500</i></span>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="session-descp">
                               <span class="block text-center white">Make your plan with Tina</span>
                             </div>
@@ -586,22 +586,22 @@
               <div class="col-md-6">
                 <div class="package-chart">
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                       <div class="consult-chart relate inline-block text-center">
                         <span class="noconsult brand-brown-dark font-semibold">4</span>
                         <span class="text-uppercase white session font-gotham-bold">sessions</span>
                       </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                       <div class="session-charges brand-brown-bg">
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="price">
                               <span class="block">Charges</span>
                               <span class="block money"><i class="fa fa-inr">25000</i></span>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="session-descp">
                               <span class="block text-center white">1 Month Duration</span>
                             </div>
@@ -615,22 +615,22 @@
               <div class="col-md-6">
                 <div class="package-chart">
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                       <div class="consult-chart relate inline-block text-center">
                         <span class="noconsult brand-brown-dark font-semibold">8</span>
                         <span class="text-uppercase white session font-gotham-bold">sessions</span>
                       </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                       <div class="session-charges brand-brown-bg">
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="price">
                               <span class="block">Charges</span>
                               <span class="block money"><i class="fa fa-inr">45000</i></span>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="session-descp">
                               <span class="block text-center white">2 Months Duration</span>
                             </div>
@@ -678,32 +678,40 @@
         <h2 class="text-uppercase brand-primary text-center consult-head">testimonials</h2>
         <div class="testimonial-list">
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 col-sm-3">
               <div class="testimonial-imgholder">
                 <img src="img/consulting/test-img1.png" alt="" class="img-responsive m-center">
               </div>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 col-sm-9">
               <div class="testi-detail">
+                <h3 class="name brand-primary m-clear visible-xs">Amruta Mauskar</h3>
+                <h4 class="profession brand-primary m-clear visible-xs">Profesional and Dancer</h4>
                 <p class="text-justify">A girl with amazing fashion sense. Instead of writing something about you I would like to be honest and confess the changes you brough in my fashion sense. You made me realise rather than running after and spending huge amount of money
                   on fashionable designer clothes, it is important to have good physic. Your skill in fixing &amp; matching out of existing clothes &amp; taking care of pocket is well appreciated. I would like to mention that my fashion sense right from
                   head to toe has been very well taken care by you.</p>
-                <h4 class="name brand-primary">Amruta Mauskar</h4>
-                <h4 class="profession brand-primary">Profesional and Dancer</h4>
+                <h3 class="name brand-primary m-clear hidden-xs">Amruta Mauskar</h3>
+                <h4 class="profession brand-primary m-clear hidden-xs">Profesional and Dancer</h4>
               </div>
             </div>
           </div>
         </div>
         <div class="testimonial-list">
           <div class="row">
-            <div class="col-md-10">
-              <div class="testi-detail">
-                <p class="text-justify">Improvement in image and grooming requires personal care! That’s exactly what TINA provides with her complete uniqueness and thorough understanding of my needs! What’s WOW is the value for money. She brings added freshness in an individual’s
-                  self esteem. Journey has just begun.</p>
-                <h4 class="name brand-primary">Roy</h4>
+            <div class="col-md-2 col-sm-3 visible-xs">
+              <div class="testimonial-imgholder">
+                <img src="img/consulting/test-img2.png" alt="" class="img-responsive m-center">
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-10 col-sm-9">
+              <div class="testi-detail">
+                <h3 class="name brand-primary m-clear visible-xs">Roy</h3>
+                <p class="text-justify">Improvement in image and grooming requires personal care! That’s exactly what TINA provides with her complete uniqueness and thorough understanding of my needs! What’s WOW is the value for money. She brings added freshness in an individual’s
+                  self esteem. Journey has just begun.</p>
+                <h3 class="name brand-primary m-clear hidden-xs">Roy</h3>
+              </div>
+            </div>
+            <div class="col-md-2 col-sm-3 hidden-xs">
               <div class="testimonial-imgholder">
                 <img src="img/consulting/test-img2.png" alt="" class="img-responsive m-center">
               </div>
