--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -227,7 +227,7 @@
           </uib-tab-heading>
           <p class="brand-primary letter-space" ng-show = "cod">Thank you for Shopping with us</p>
           <p class="brand-primary letter-space" ng-hide = "cod">Payment Details</p>
-          <form method="post" name="customerData" action="http://www.myfynx.com/newfynx/paymentgateway/ccavRequestHandler.php">
+          <form method="post" name="customerData" ng-hide = "cod" action="http://www.myfynx.com/newfynx/paymentgateway/ccavRequestHandler.php">
 							<table width="40%" height="100">
 								<tr style="display:none">
 									<td>TID	:</td><td><input type="text" name="tid" ng-model="order" readonly /></td>
